Update Malicious 3CX Applications (via network activities).yml

--- a/Malicious 3CX Applications (via network activities).yml
+++ b/Malicious 3CX Applications (via network activities).yml
@@ -1,3 +1,4 @@
+//author:yunusmrcoban
 DeviceNetworkEvents
 | where InitiatingProcessFileName has '3CXDesktopApp.exe'
 | where RemoteUrl in~ ('akamaicontainer.com',
